package patterns.observerPattern;

public interface Observer {
    void update();
}
